feat: enhance UserDTO and UserInsertDTO with improved validation messages and refactor UserServiceImpl for cleaner code